--- a/OnlineTutor2/Views/Test/SpellingTests.cshtml
+++ b/OnlineTutor2/Views/Test/SpellingTests.cshtml
@@ -60,8 +60,8 @@ else
     <div class="row">
         @foreach (var test in Model)
         {
-            <div class="col-md-6 col-lg-4 mb-4 test-card" data-status="@(test.IsActive ? "active" : "inactive")">
-                <div class="card h-100 @(test.IsActive ? "" : "opacity-75")">
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2-4 col-xxl-5th mb-3 test-card" data-status="@(test.IsActive ? "active" : "inactive")">
+                <div class="card h-100 test-card @(test.IsActive ? "" : "opacity-75")">
                     <div class="card-header d-flex justify-content-between align-items-center">
                         <h6 class="card-title mb-0">
                             <i class="@category.IconClass text-primary"></i> @test.Title
