--- a/OnlineTutor2/Views/Shared/_Layout.cshtml
+++ b/OnlineTutor2/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom navbar-fixed">
             <div class="container-fluid">
                 <a class="navbar-brand fw-bold text-primary" asp-area="" asp-controller="Home" asp-action="Index">
-                    <i class="fas fa-graduation-cap"></i> Тьюторная
+                    <i class="fas fa-graduation-cap"></i>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -239,7 +239,7 @@
 
             <div class="row d-md-none mt-1">
                 <div class="col-12 text-center">
-                    <small class="text-muted" style="font-size: 0.65rem;">&copy; 2025 Тьюторная</small>
+                    <small class="text-muted" style="font-weight: bold;">&copy; 2025 Тьюторная</small>
                 </div>
             </div>
         </div>
