--- a/OnlineTutor2/Views/Shared/_Layout.cshtml
+++ b/OnlineTutor2/Views/Shared/_Layout.cshtml
@@ -153,16 +153,16 @@
     <footer class="footer-fixed footer-compact bg-light border-top">
         <div class="container">
 
-            <div class="row d-none d-md-flex align-items-center">
+            <div class="row d-none d-md-flex align-items-start">
 
                 <div class="col-md-4 footer-column text-center">
-                    <h6><i class="fas fa-graduation-cap text-primary text-center"></i> Тьюторная</h6>
-                    <p class="mb-0">
+                    <h6 class="mb-2"><i class="fas fa-graduation-cap text-primary text-center"></i> Тьюторная</h6>
+                    <p class="mb-2">
                         <a asp-area="" asp-controller="Home" asp-action="Privacy" class="text-decoration-none">
                             <i class="fas fa-shield-alt text-center"></i> Конфиденциальность
                         </a>
                     </p>
-                    <p class="mb-1">&copy; 2025</p>
+                    <p class="mb-0">&copy; 2025</p>
                 </div>
 
                 <div class="col-md-4 footer-column text-center">
