fix spellinTest view

--- a/OnlineTutor2/Views/Test/SpellingTests.cshtml
+++ b/OnlineTutor2/Views/Test/SpellingTests.cshtml
@@ -11,10 +11,9 @@
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
                 <li class="breadcrumb-item">
-                    <a asp-action="Index"><i class="@category.IconClass"></i> Тесты</a>
+                    <a asp-action="Index"> Тесты</a>
                 </li>
-                <li class="breadcrumb-item active">
-                    <i class="@category.IconClass"></i> @category.Name
+                <li class="breadcrumb-item active"> @category.Name
                 </li>
             </ol>
         </nav>
