--- a/OnlineTutor2/Views/TestAnalytics/SpellingAnalytics.cshtml
+++ b/OnlineTutor2/Views/TestAnalytics/SpellingAnalytics.cshtml
@@ -31,7 +31,7 @@
             <div class="card-body">
                 <i class="fas fa-users text-primary"></i>
                 <h4 class="mt-2 text-primary">@Model.Statistics.TotalStudents</h4>
-                <small class="text-muted">Всего учеников</small>
+                <small class="text-muted">Учеников</small>
             </div>
         </div>
     </div>
