fix puctuation tets create view

--- a/OnlineTutor2/Views/PunctuationTest/Create.cshtml
+++ b/OnlineTutor2/Views/PunctuationTest/Create.cshtml
@@ -6,9 +6,9 @@
 <div class="row justify-content-center">
     <div class="col-md-8">
         <div class="card shadow">
-            <div class="card-header bg-warning text-dark">
+            <div class="card-header bg-primary text-white">
                 <h4 class="mb-0">
-                    <i class="fas fa-exclamation"></i> Создание теста по пунктуации
+                    <i class="fas fa-edit"></i> Создание теста по пунктуации
                 </h4>
             </div>
             <div class="card-body">
