--- a/OnlineTutor2/Views/SpellingTest/Create.cshtml
+++ b/OnlineTutor2/Views/SpellingTest/Create.cshtml
@@ -6,9 +6,9 @@
 <div class="row justify-content-center">
     <div class="col-md-8">
         <div class="card shadow">
-            <div class="card-header bg-success text-white">
+            <div class="card-header bg-primary text-white">
                 <h4 class="mb-0">
-                    <i class="fas fa-spell-check"></i> Создание теста по орфографии
+                    <i class="fas fa-edit"></i> Создание теста по орфографии
                 </h4>
             </div>
             <div class="card-body">
